# fastapi-edgedb-crud

./: .env_sample  .gitignore  Makefile  README.md  pyproject.toml
app/: events.py  main.py  users.py
app/queries/: create_event_async_edgeql.py  create_user_async_edgeql.py  delete_event_async_edgeql.py  delete_user_async_edgeql.py  get_event_by_name_async_edgeql.py  get_events_async_edgeql.py  get_user_by_name_async_edgeql.py  get_users_async_edgeql.py  update_event_async_edgeql.py  update_user_async_edgeql.py
config/: settings.py
scripts/: test_create_db..sh  test_destroy_db.sh
tests/: conftest.py  fixture_async_edgeql.py  test_events.py  test_users.py
