[tool.poetry]
name = "edgeb-fastapicrud"
version = "0.1.0"
description = ""
authors = ["Diwash Bhandari <diwash.bhandari@codavatar.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
edgedb = "^1.5.0"
fastapi = {extras = ["all"], version = "^0.100.0"}
python-dotenv = "^1.0.0"
pre-commit = "^3.3.3"
httpx = {extras = ["cli"], version = "^0.24.1"}
uvicorn = "^0.23.0"
black = "^23.7.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.4.1"
pytest = "^7.4.0"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Linter configuruation.
[tool.isort]
profile = "black"
atomic = true
extend_skip_glob = "migrations,scripts,app/queries,myvenv,tests"
line_length = 88

[tool.black]
extend-exclude = "migrations,scripts"
force-exclude = "app/queries/.*|tests"

[tool.mypy]
follow_imports = "skip"
ignore_missing_imports = true
warn_no_return = false
warn_unused_ignores = true
allow_untyped_globals = true
allow_redefinition = true
pretty = true
exclude = "myvenv"

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
